--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <a class="nav-link active px-3" aria-current="page" href="#">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-3" href="#blog">Blog</a>
+                        <a class="nav-link px-3" href="#port">Portfolio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link px-3" href="https://www.instagram.com/a.nopall/" target="_blank"><span class="contact">Contact Me!</span></a>
