--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
-        <title>Nopall - Portfolio</title>
+        <title>Ahmad Noval Algifari</title>
+        <link rel="shortcut icon" href="asset/icon/logo.png">
     </head>
     <style>
         body {
@@ -108,7 +109,7 @@
                             </div>
                             <h6>2019 - 2022</h6>
                             <h4>SMKN 19 Jakarta</h4>
-                            <p>Saya merupakan siswa SMKN 19 yang berjurusan multimedia</p>
+                            <p>Saya merupakan lulusan siswa SMKN 19 yang berjurusan multimedia</p>
                         </li>
                     </ul>
                 </div>
