--- a/index.html
+++ b/index.html
@@ -155,19 +155,19 @@
                     <div class="row">
                         <div class="col">
                             <div class="card">
-                                <a href="#" target="_blank"><img class="img-port" src="asset/img/port/1.png"></a>
+                                <a href="https://anopall.github.io/blog/" target="_blank"><img class="img-port" src="asset/img/port/1.png"></a>
                                 <img class="wm" src="asset/icon/link.png">
                             </div>
                         </div>
                         <div class="col">
                             <div class="card">
-                                <a href="#" target="_blank"><img class="img-port" src="asset/img/port/2.png"></a>
+                                <a href="https://anopall.github.io/blog/" target="_blank"><img class="img-port" src="asset/img/port/2.png"></a>
                                 <img class="wm" src="asset/icon/link.png">
                             </div>
                         </div>
                         <div class="col">
                             <div class="card">
-                                <a href="#" target="_blank"><img class="img-port" src="asset/img/port/3.png"></a>
+                                <a href="https://anopall.github.io/ppdb/" target="_blank"><img class="img-port" src="asset/img/port/3.png"></a>
                                 <img class="wm" src="asset/icon/link.png">
                             </div>
                         </div>
@@ -221,6 +221,6 @@
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="script.js"></script>
+    <!-- <script type="text/javascript" src="script.js"></script> -->
     </body>
 </html>
