--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </section>
 
     <!-- portfolio -->
-    <section class="port">
+    <section class="port" id="port">
         <div class="container-2">
             <h1 class="title">Portfolio</h1>
             <ul>
