--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             <div class="icon-wid">
                                 <i class="bi bi-briefcase-fill" style="font-size: 30px"></i>
                             </div>
-                            <h6>2022 & Sekarang</h6>
+                            <h6>2022 - Sekarang</h6>
                             <h4>PT Mardawa</h4>
                             <p>Saya bekerja sebagai karyawan freelance di bidang front end dalam projek website PPDB Bogor dan PPDB Cilegon</p>
                         </li>
