--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <a class="nav-link px-3" href="#port">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-3" href="https://www.instagram.com/anopalll/" target="_blank"><span class="contact">Contact Me!</span></a>
+                        <a class="nav-link px-3" href="https://www.instagram.com/novalalgfr_/" target="_blank"><span class="contact">Contact Me!</span></a>
                     </li>
                 </ul>
             </div>
