--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <a class="nav-link px-3" href="#port">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-3" href="https://www.instagram.com/a.nopall/" target="_blank"><span class="contact">Contact Me!</span></a>
+                        <a class="nav-link px-3" href="https://www.instagram.com/novalalgfr_/" target="_blank"><span class="contact">Contact Me!</span></a>
                     </li>
                 </ul>
             </div>
@@ -122,7 +122,7 @@
                             </div>
                             <h6>2022</h6>
                             <h4>PT Mardawa</h4>
-                            <p>Saya bekerja sebagai karyawan freelance di bidang front end dalam projek website PPDB Bogor dan PPDB Cilegon</p>
+                            <p>Saya bekerja sebagai karyawan freelance di bidang front end</p>
                         </li>
                         <li>
                             <div class="icon-wid">
@@ -173,6 +173,18 @@
                         </div>
                         <div class="col">
                             <div class="card">
+                                <img class="img-port" src="asset/img/port/10.png">
+                                <img class="wm" src="asset/icon/figma.png">
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <img class="img-port" src="asset/img/port/11.png">
+                                <img class="wm" src="asset/icon/figma.png">
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
                                 <img class="img-port" src="asset/img/port/4.png">
                                 <img class="wm" src="asset/icon/ai.png">
                             </div>
@@ -207,6 +219,7 @@
                                 <img class="wm" src="asset/icon/3ds.png">
                             </div>
                         </div>
+                        <div class="col"></div>
                     </div>
                 </li>
             </ul>
@@ -221,6 +234,6 @@
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="script.js"></script>
+    <!-- <script type="text/javascript" src="script.js"></script> -->
     </body>
 </html>
